# Sentiro

./: README.md
gui_backup/gui_ubuntu/: Base_page.py  First_page.py  geojson_loader.py  gui_map_viewer_start_point_import.py  main.py  robot_destination_page.py  shop_search_page.py
gui_backup/gui_ubuntu/geojson/: base_fullmap.geojson  outline_fullmap.geojson  shops_fullmap_1F.geojson  shops_fullmap_2F.geojson  stair_n_elevator_fullmap.geojson  walkway_fullmap.geojson
gui_backup/gui_ubuntu/version2/: First_page_v2.py  Floor_guide_page_v2.py  robot_point_importer_v2.py  shop_search_page_v2.py
gui_backup/gui_ubuntu/version2/geojson/: base_112.geojson  doors_112_1.geojson  shops_2F.geojson  walkway_polygon_112_1.geojson
gui_project/gui_ubuntu/: .robot_destination_page.py.swp  Base_page.py  First_page.py  Floor_guide_page.py  gui_map_viewer_start_point_import.py  main.py  robot_destination_page.py  robot_point_importer.py  shop_search_page.py
gui_project/gui_ubuntu/geojson/: doors_fullmap.geojson  doors_pgm.geojson  fullmap_gui.pgm  outline_pgm.geojson  path_fullmap_2F.geojson  path_pgm.geojson  path_pgm_1F.geojson  path_pgm_2F.geojson  shops_pgm_1F.geojson  shops_pgm_2F.geojson  stair_n_elevator_pgm.geojson
gui_project/gui_ubuntu/install/: local_setup.sh  setup.sh
gui_project/gui_ubuntu/log/: latest_build
gui_project/gui_ubuntu/version2/: Base_page_v2.py  constants_v2.py  gui_map_viewer_start_point_import_v2.py  gui_publisher_v2.py  main_v2.py  robot_destination_page_v2.py
gui_project/gui_ubuntu/version2/geojson/: outline_112.geojson  path_1F.geojson  shops_1F.geojson  stair_n_elevator_112_1.geojson
main_ws/install/: local_setup.sh  setup.sh
main_ws/install/lib/main_bringup/: omo_r1_mcu_node  omo_r1_motor_setting_node
main_ws/install/lib/main_motor/: send_arduino_node  test_node
main_ws/install/lib/main_teleop/: teleop_joy  (+1 more)
main_ws/install/share/main_bringup/: package.dsv  package.ps1  package.sh  package.xml
main_ws/install/share/main_bringup/launch/: bringup_launch.py  navigation.launch.py  omo_r1_bringup.launch.py  omo_r1_motor_setting.launch.py  slam_launch.py
main_ws/install/share/main_bringup/map/: 112_save.pgm  112_save.yaml  112map_save.pgm  fullmap_save.pgm  fullmap_save.yaml  fullmap_serial.data
main_ws/install/share/main_bringup/params/: nav2_params.yaml  omo_r1_lidar.yaml
main_ws/log/: latest_build
main_ws/motor_run_ex/: motor_run_ex.ino
main_ws/src/main_bringup/: CMakeLists.txt  setup.py
main_ws/src/main_description/: CMakeLists.txt
main_ws/src/main_interface/: CMakeLists.txt
main_ws/src/main_motor/: CMakeLists.txt  package.xml
main_ws/src/main_teleop/: CMakeLists.txt  package.xml  setup.cfg  setup.py
main_ws/src/mqtt/: setup.py
main_ws/src/obstacle_plugin/: CMakeLists.txt
main_ws/src/obstacle_plugin/src/: manual_obstacle_layer.cpp
(+168 files in other folders)
