<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>main_bringup</name>
  <version>0.0.0</version>
<description>Main bringup package</description>
  <maintainer email="e93052080@gmail.com">leehyungjin</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
	
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>hls_lfcd_lds_driver</exec_depend>
  <exec_depend>main_description</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros_py</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>main_interface</depend>
  <depend>message_filters</depend>
	
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
